select order arrow whitespace fixed

--- a/wp-content/themes/indigo-wine/less/_woocommerce.less
+++ b/wp-content/themes/indigo-wine/less/_woocommerce.less
@@ -933,6 +933,9 @@ body
       color: @brand-secondary;
       border-color: @brand-secondary;
       font-weight: 600;
+      @media screen and (min-width: 768px){
+        margin-right: 1.2em;
+      }
   }
 }
 
